# google_contacts_prep

./: .gitignore  Dockerfile  README.md  app.py  index.py  main.py  pyproject.toml  requirements.txt
backend/: Driver_Bases.py  google_contacts_data_builder.py
docs/: previous_app_comparation.ipynb
frontend/: app.py  index.py  tab_bases.py
frontend/assets/css/: custom.css  normalize.css
frontend/form/: form.html  form2.html  style.css
myTools/: Driver_Bases.py
tabs/: tab_bases.py
