[tool.poetry]
name = "google-contacts-prep"
version = "0.1.0"
description = ""
authors = ["Matias Bertani <matiasbertani@gmail.com>"]
readme = "README.md"
packages = [{include = "google_contacts_prep"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"
pandas = "^2.1.4"
dash-bootstrap-components = "^1.5.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
